# wehttamsnaps-dots

./: .gitignore  LICENSE  README.md  install.sh  logo.txt
colorschemes/WehttamSnaps/: WehttamSnaps.json
configs/: mimeapps.list  pavucontrol.ini  picom.conf  starship.toml  starship.toml.bak
configs/MangoHud/: MangoHud.conf
configs/Thunar/: accels.scm  uca.xml
configs/corectrl/: corectrl.ini
configs/dunst/: dunstrc
configs/fastfetch/: config.jsonc  config.jsonc_logo.txt  config.jsonc_vos-logo  logo-clean.txt  logo-small.txt  logo.txt  ws-logo.txt
configs/fuzzel/: fuzzel.ini
configs/ghostty/: config  config.bak
configs/noctalia/: colors.json  settings.json
configs/picom/: picom.conf
configs/rofi/: config.rasi
configs/scripts/: audio-setup.sh  toggle-gamemode.sh
configs/spicetify/: config-xpui.ini
configs/spotify/: prefs
configs/starship/: ii-palette.toml  starship.toml.bak2
configs/swayfx/: check_windows.sh  config  noctalia
configs/wehttamsnaps/: cheat-sheet.html  cheat-sheet.txt  logo.txt
configs/xfce4/: xfce4-screenshooter
configs/xsettingsd/: xsettingsd.conf
configs/zsh/: .histfile  .p10k.zsh  .zcompdump  .zcompdump-snaps-pc-5.9  .zcompdump-snaps-pc-5.9.zwc  .zshrc.pre-oh-my-zsh
docs/: INSTALL.md  QUICKSTART.md  wehttamsnaps-jarvis-dashboard.html
mo2-linux-helper/: README.md  index.html  package-lock.json  package.json  vite.config.ts
mo2-linux-helper/src-tauri/: Cargo.toml  tauri.conf.json
mo2-linux-helper/src-tauri/src/: lib.rs  main.rs
rofi/scripts/: keyhints.sh
scripts/: generate_cheatsheet.sh
sounds/: README.md
(+141 files in other folders)
